# fastprop

./: .fastpropconfig  .gitignore  CITATION.cff  LICENSE  README.md  fastprop revisions notes  fastprop_demo.ipynb  pyproject.toml  start_project.py  temp.py
.github/workflows/: CI.yml  gen_docs.yml  paper.yml
benchmarks/: README.md  run_all.sh
benchmarks/alkanes/: alkanes.yml  parse.py  run_log.txt
benchmarks/ara/: ara.yml  ara_linear.yml  chemprop_ara.sh
benchmarks/cepdb_subset/: cepdb_subset.yml
benchmarks/delta_fubrain/: delta_fubrain.py  delta_fubrain.yml
benchmarks/esol/: esol.yml
benchmarks/flash/: chemprop_flash.sh  flash.yml  flash_linear.yml
benchmarks/freesolv/: freesolv.yml  parse.py  run_log.txt
benchmarks/fubrain/: chemprop_fubrain.sh  delta_fubrain.py  delta_fubrain.yml  fubrain.yml
benchmarks/h2s/: chemprop_h2s.sh  h2s.yml  parse.py
benchmarks/hiv/: hiv.yml  parse.py
benchmarks/hopv15/: hopv15.yml  parse.py  run_log.txt
benchmarks/hopv15_subset/: chemprop_hopv15_subset.sh  hopv15_subset.yml
benchmarks/ocelot/: ocelot.yml
benchmarks/pah/: arockiaraj_pah_data.csv  chemprop_pah.sh  pah.yml  pah_linear.yml
benchmarks/pgp/: benchmark_data.csv.1  pgp.yml  pgp_linear.yml
benchmarks/qm8/: qm8.yml  run_log.txt
benchmarks/qm9/: qm9.yml  qm9_linear.yml
benchmarks/quantumscents/: parse.py  quantumscents.py  quantumscents.yml
benchmarks/sider/: chemprop_sider.sh  sider.yml
benchmarks/ysi/: chemprop_ysi.sh  ysi.yml  ysi_linear.yml
docs/: conf.py  modules.rst
examples/: alkane_boiling.csv  boiling.yml  example_fastprop_config.yml  example_fastprop_predict_config.yml  example_fastprop_train_config.yml  fastprop_computational_adme_demo.ipynb  fastprop_polaris_classification_demo.ipynb  oom_prepare.py  oom_shap.py  oom_training.py  track_dropped.py
fastprop/: .fastpropconfig  .fastpropconfig_template  __init__.py  data.py  defaults.py  descriptors.py  fastprop.py  fastprop_core.py  hopt.py  io.py  metrics.py  model.py  predict.py  preprocessing.py  shap.py  train.py
fastprop/cli/: base.py  fastprop_cli.py  predict.py  shap.py  train.py
fastprop/utils/: __init__.py  calculate_descriptors.py  descriptor_lists.py  linear_baseline.py  load_data.py  select_descriptors.py  validate_config.py
paper/: additional_file_1.md  default.latex  paper.bib  paper.md  statistical_comparisons.ods
test/: test_fastprop.py
