[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fastprop"
version = "0.0.0a0"
authors = [
    { name = "Jackson Burns" },
]
license = { text = "MIT" }
description = "Fast Molecular Property Prediction with mordredcommunity"
classifiers = [
    "Programming Language :: Python :: 3",
]
urls = { Homepage = "https://github.com/JacksonBurns/fastprop" }
requires-python = ">=3.8"
dependencies = ["pyyaml"]

[project.optional-dependencies]
dev = ["black", "isort", "pytest"]
demos = ["jupyter"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.isort]
profile = "black"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["fastprop*"]
exclude = ["docs*", "examples*", "test*"]
