[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fastprop"
version = "1.0.0b2"
authors = [
    { name = "Jackson Burns" },
]
license = { text = "MIT" }
description = "Fast Molecular Property Prediction with mordredcommunity"
classifiers = [
    "Programming Language :: Python :: 3",
]
urls = { Homepage = "https://github.com/JacksonBurns/fastprop" }
requires-python = ">=3.8"
dependencies = ["pyyaml", "lightning", "mordredcommunity", "astartes[molecules]", "tensorboard", "psutil"]

[project.optional-dependencies]
dev = ["black", "isort", "pytest"]
hopt = ["ray[train]", "optuna"]
shap = ["shap"]
bmark = ["py2opsin"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
fastprop = "fastprop.cli.fastprop_cli:main"

[tool.isort]
profile = "black"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["fastprop*"]
exclude = ["benchmarks*", "examples*", "test*"]
