[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fastprop"
version = "1.0.6"
authors = [
    { name = "Jackson Burns" },
]
license = { text = "MIT" }
description = "Fast Molecular Property Prediction with mordredcommunity"
classifiers = [
    "Programming Language :: Python :: 3",
]
urls = { Homepage = "https://github.com/JacksonBurns/fastprop" }
requires-python = ">=3.8"
dependencies = ["pyyaml", "lightning", "torch>=1.13", "mordredcommunity", "astartes[molecules]", "tensorboard", "psutil", "polars", "pandas", "pyarrow", "numpy<2.0.0"]

[project.optional-dependencies]
dev = ["black", "isort", "pytest", "pytest-cov"]
hopt = ["ray[train]", "optuna"]
shap = ["shap<0.45", "matplotlib"]
bmark = ["py2opsin"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
fastprop = "fastprop.cli.base:main"

[tool.isort]
profile = "black"

[tool.black]
line-length = 150

[tool.autopep8]
max_line_length = 150
in-place = true
recursive = true
aggressive = 3

[tool.pytest.ini_options]
addopts = "--cov fastprop"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["fastprop*"]
exclude = ["benchmarks*", "examples*", "test*"]
